test/spec_vectors/exports/ok/module_48.wat
(module (table (export "a") 0 1 funcref))