test/spec_vectors/exports/fail/module_38.wat
(module (import "spectest" "global_i32" (global i32)) (export "a" (global 1)))